<resources>
    <string name="app_name">Saidaly Tech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="saidaly_tech">Saidaly Teach</string>
    <string name="to_continue_login_now">To Continue, Login Now</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name:</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="sign_Up">Sign Up</string>
    <string name="search">search</string>
    <string name="required">required</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_match">confirm password not match</string>
    <string name="Successful_Register">Successful Register</string>
    <string name="price">Price:</string>
    <string name="dosage">Dosage:</string>
    <string name="pamlat">Pamlat:</string>
    <string name="company">Company:</string>
    <string name="composition">composition:</string>
    <string name="Name">Name:</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="note">note...</string>
    <string name="note2">Note:</string>

    <string name="total">Total:</string>
    <string name="add_more">Add More</string>
    <string name="previous_order">Previous Order</string>
    <string name="date">Date:</string>
    <string name="detail_order">Detail Order</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="send">send</string>
    <string name="detail_rosheta">Detail Rosheta</string>
    <string name="rosheta_id">Rosheta Id</string>
    <string name="save">save</string>

    <string-array name="spinnergender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>