<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12ssp"
        android:text="@string/welcome"
        android:textColor="@color/Main_Color"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8ssp"
        android:text="@string/to_continue_login_now"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/edit_shape"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_8ssp"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt2" />

    <View
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_marginStart="@dimen/_28sdp"
        android:background="@color/Main_Color"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@drawable/edit_shape"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_8ssp"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <View
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_marginStart="@dimen/_28sdp"
        android:background="@color/Main_Color"
        app:layout_constraintBottom_toBottomOf="@+id/edit_pass"
        app:layout_constraintStart_toStartOf="@+id/edit_pass"
        app:layout_constraintTop_toTopOf="@+id/edit_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/edit_button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/Main_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18ssp"
        android:text="@string/register_now"
        android:textColor="@color/Main_Color"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <ImageView
        android:id="@+id/background_down"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        android:scaleType="fitXY"
        android:src="@drawable/background_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>