<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/_8sdp"
    android:backgroundTint="@color/snow"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_4sdp"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_fake" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/img_item"
            app:layout_constraintTop_toTopOf="@id/img_item"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/img_item"
            tools:text="Panadol" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintStart_toEndOf="@id/quantity"
            tools:text="23" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_quantity"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/price"
            />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_quantity"
            app:layout_constraintStart_toEndOf="@id/price"
            tools:text="65.00" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_price"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_price"
            app:layout_constraintStart_toEndOf="@id/total"
            tools:text="65.00" />

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_total"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/note2"
            />

        <TextView
            android:id="@+id/txt_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_total"
            app:layout_constraintStart_toEndOf="@id/note"
            tools:text="er tereq werwe defgs w" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>